test/programs/good/typechecker/measr_5.lq
initBit :: Qbit -> Bit
initBit = measr 
