test/programs/bad/typechecker/measr_5.lq
initBit :: Bit -> Qbit
initBit = measr
